--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^2.1.0",
-    "stylelint-webpack-plugin": "^0.10.5"
+    "stylelint-webpack-plugin": "^0.10.5",
+    "webpack-livereload-plugin": "1"
   }
 }
